src/web/src/styles/globals.scss
// Import Tailwind CSS base styles
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Base Typography Styles */
@layer base {
  h1 {
    @apply text-2xl tracking-tighter md:text-4xl;
  }
  h2 {
    @apply text-xl tracking-tighter md:text-3xl;
  }
  h3 {
    @apply text-lg tracking-tighter md:text-2xl;
  }
  h4 {
    @apply text-base tracking-tighter md:text-xl;
  }
  h5 {
    @apply text-sm tracking-tighter md:text-lg;
  }
  h6 {
    @apply text-xs tracking-tighter md:text-base;
  }
}

/* Body Styles */
body {
  background-color: theme("colors.white");
}

/* Button Styles */
.btn {
  @apply rounded-full;
}
.btn-success {
  @apply text-white;
}

/* Badge Styles */
.badge {
  @apply h-6 overflow-hidden whitespace-nowrap rounded-md border-none text-xs font-bold;
}

/* Divider Styles */
.divider {
  @apply h-[2px] rounded-full bg-gray-light;
}

/* Modal Overlay */
.modal-overlay {
  background-color: rgba(0, 0, 0, 0.5);
}

/* Scrollbar Customization */
:root {
  --primary: theme("colors.gray-light");
  --secondary: theme("colors.gray-dark");
}
/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 12px;
}
*::-webkit-scrollbar-track {
  background: var(--primary);
  border-radius: 5px;
}
*::-webkit-scrollbar-thumb {
  background-color: var(--secondary);
  border-radius: 14px;
  border: 3px solid var(--primary);
}

/* Side-Drawer Scroll Fix */
/* Prevent white-space on the right of the side-drawer when open */
/* https://github.com/saadeghi/daisyui/issues/2859 */
html {
  scrollbar-gutter: auto !important;
}
html:has(body.content-overflow-y) {
  scrollbar-gutter: stable !important;
}

/* Theme Overrides */
:root .bg-theme {
  @apply bg-purple;
}
[data-theme="purple"] .bg-theme {
  @apply bg-purple;
}
[data-theme="green"] .bg-theme {
  @apply bg-green;
}
[data-theme="blue"] .bg-theme {
  @apply bg-blue;
}
[data-theme="orange"] .bg-theme {
  @apply bg-orange;
}

/* Miscellaneous Styles */
/* Hide the Google Translate toolbar */
.skiptranslate {
  display: none !important;
}

/* Carousel Item Alignment Fix */
.slide {
  text-align: inherit !important;
}

/* Prevent Dragging of Elements on iOS */
.no-drag {
  -webkit-user-drag: none;
}

/* Opportunity Horizontal Filter Carousel Pill Color */
.rssas-circle {
  background: theme("colors.purple") !important;
}

/* Hide the scrollbar on the slider tray */
.rssas-slider-tray {
  &::-webkit-scrollbar {
    display: none; /* Safari and Chrome */
  }
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

/* Adjust Z-Index for Feedback Button */
/* Prevent the feedback button from covering the user menu drawer */
#beacon-container .BeaconFabButtonFrame {
  z-index: 30 !important;
}

/* Third-Party Library Overrides */
/* NProgress Styles */
#nprogress .bar {
  height: 5.5px !important;
  background: theme("colors.white") !important;
  opacity: 0.3 !important;
}
#nprogress .peg {
  display: none !important;
}

/* React-Toastify Styles */
.Toastify__close-button {
  @apply text-white opacity-100;
}
.Toastify__close-button:hover,
.Toastify__close-button:focus {
  @apply scale-110;
}

/* MDXEditor Overrides */
.mdxeditor-popup-container {
  z-index: 2000 !important;
}
.editor.editable .mdxeditor {
  border-style: solid;
  border-width: 1px;
  border-color: theme("colors.gray");
  border-radius: var(--radius-medium);
}
.editor.readonly .mdxeditor {
  padding: 0;
  margin: 0;
}
.editor.readonly .mdxeditor-toolbar {
  display: none;
}
.mdxeditor ol,
.mdxeditor ul {
  list-style-type: disc !important;
  margin-left: 0.5rem !important;
  padding-left: 0.5rem !important;
}
.mdxeditor li {
  text-indent: 0.5rem;
}
.mdxeditor li[role="checkbox"]::before,
.mdxeditor li[role="checkbox"]::after {
  margin-top: 5px;
}
.mdxeditor ol {
  list-style-type: decimal !important;
}
.mdxeditor :where(blockquote):not(:where([class~="not-prose"] *)) {
  font-weight: 500 !important;
  font-style: italic !important;
  color: var(--tw-prose-quotes) !important;
  border-left-width: 0.25rem !important;
  border-left-color: theme("colors.gray") !important;
  quotes: "201C" "201D" "2018" "2019" !important;
  margin-top: 1.6em !important;
  margin-bottom: 1.6em !important;
  padding-left: 1em !important;
}

/* Media Queries */
/* Hide widgets on mobile devices */
@media (max-width: 760px) {
  /* Hide Help Scout */
  #beacon-container {
    display: none !important;
  }
  /* Hide Gleac Chat */
  .widget {
    visibility: hidden !important;
  }
  /* Hide HubSpot Messages */
  #hubspot-messages-iframe-container {
    visibility: hidden !important;
  }
}

